GNOME Bugzilla – Bug 726433
rtspconnection: setsockopt() argument 4 is not properly casted for W32
Last modified: 2014-03-16 10:23:10 UTC
Cast the argument into (const char *) on W32, as winsock2 expects it.
Created attachment 272030 [details] [review] Silence a warning in gstrtspconnection.c Cast the argument into (const char *) on W32, as winsock2 expects it.
commit d6bd37460a58a8ca53c093ca51f8786aa05ed800 Author: Руслан Ижбулатов <lrn1986@gmail.com> Date: Sat Mar 15 20:21:32 2014 +0000 rtspconnection: Silence a compiler warning Cast the argument into (const char *) on W32, as winsock2 expects it. https://bugzilla.gnome.org/show_bug.cgi?id=726433